release/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "isaiahwong.dev"
      - "www.isaiahwong.dev"
---
# All traffic routed to the fleetman-webapp service
# No DestinationRule needed as we aren't doing any subsets, load balancing or outlier detection.
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway-service-rule
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
  - headers:
      response:
        remove:
          - "x-envoy-upstream-service-time"
          - "server"
    route:
    - destination:
        port:
          number: 5000
        host: gateway-service.default.svc.cluster.local
---
# Removes server type
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: server-name-tweaks
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER # http connection manager is a filter in Envoy
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: MERGE
      value:
        config:
          server_name: "_"
